--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               >
                 <img
                   alt="Editorial"
-                  src="https://github.com/communication-philippines-AA/imagesjune/blob/main/EditorialM.jpeg?raw=true"
+                  src="https://github.com/communication-philippines-AA/imagesjune/blob/main/Retrat%20(2).jpg?raw=true"
                   style="outline:none;border:none;text-decoration:none;vertical-align:middle;display:inline-block;max-width:100%"
                 />
               </div>
@@ -997,7 +997,7 @@
                                 style="text-decoration:none"
                                 target="_blank"
                                 ><img
-                                  alt="In Memorian"
+                                  alt="Découvrez le concile de Nicée en video"
                                   src="https://github.com/communication-philippines-AA/imagesjune/blob/main/bon_samaritain_ld.png?raw=true"
                                   style="outline:none;border:none;text-decoration:none;vertical-align:middle;display:inline-block;max-width:100%"
                               /></a>
@@ -1496,31 +1496,6 @@
                         style="box-sizing:content-box;vertical-align:middle;padding-left:5.333333333333333px;padding-right:5.333333333333333px"
                       >
                         <div style="text-align:center;padding:0px 0px 0px 0px">
-                          <a
-                            href="https://www.facebook.com/assumptionists.ph"
-                            style="color:#FFFFFF;font-size:16px;font-weight:bold;background-color:#ce3b5b;border-radius:4px;display:inline-block;padding:12px 20px;text-decoration:none"
-                            target="_blank"
-                            ><span
-                              ><!--[if mso
-                                ]><i
-                                  style="letter-spacing: 20px;mso-font-width:-100%;mso-text-raise:30"
-                                  hidden
-                                  >&nbsp;</i
-                                ><!
-                              [endif]--></span
-                            ><span>Social media</span
-                            ><span
-                              ><!--[if mso
-                                ]><i
-                                  style="letter-spacing: 20px;mso-font-width:-100%"
-                                  hidden
-                                  >&nbsp;</i
-                                ><!
-                              [endif]--></span
-                            ></a
-                          >
-                        </div>
-                        <div style="text-align:center;padding:4px 4px 0px 0px">
                           <a
                             href="https://assumptionists.org.ph"
                             style="color:#FFFFFF;font-size:16px;font-weight:bold;background-color:#ce3b5b;border-radius:4px;display:inline-block;padding:12px 20px;text-decoration:none"
