--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!doctype html>
 <html>
+  <head>
+      <meta name=”robots” content=”noindex,nofollow”>
+      <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+      <meta property="og:description" content="Newsletter of the Augustinians of the Assumption in the Philippines">
+      <meta property="og:image" content="https://github.com/communication-philippines-AA/imagesjune/blob/main/Retrat%20(2).jpg?raw=true">
+    </head>
   <body>
     <div
       style='background-color:#244d61;color:#262626;font-family:"Helvetica Neue", "Arial Nova", "Nimbus Sans", Arial, sans-serif;font-size:16px;font-weight:400;letter-spacing:0.15008px;line-height:1.5;margin:0;padding:32px 0;min-height:100%;width:100%'
@@ -18,7 +24,7 @@
             <td>
               <div style="text-align:center;padding:0px 0px 0px 0px">
                 <a
-                  href="https://communication-philippines-aa.github.io/NewsletterMarchAprilFrench/"
+                  href="https://communication-philippines-aa.github.io/NewsletterJunef/"
                   style="color:#14a7c7;font-size:10px;font-weight:bold;background-color:#FFFFFF;border-radius:4px;display:inline-block;padding:4px 8px;text-decoration:none"
                   target="_blank"
                   ><span
@@ -993,11 +999,11 @@
                             </h3>
                             <div style="padding:0px 24px 4px 16px">
                               <a
-                                href="https://m.youtube.com/watch?v=oFHmmszbxd8&amp;pp=ygUiY29uY2lsZSBkZSBuaWPDqWUgYXNzb21wdGlvbm5pc3Rlcw%3D%3D"
+                                href="https://sway.cloud.microsoft/W9Snad0FB7Hs3EDR?ref=Link"
                                 style="text-decoration:none"
                                 target="_blank"
                                 ><img
-                                  alt="Découvrez le concile de Nicée en video"
+                                  alt="Bayard"
                                   src="https://github.com/communication-philippines-AA/imagesjune/blob/main/bon_samaritain_ld.png?raw=true"
                                   style="outline:none;border:none;text-decoration:none;vertical-align:middle;display:inline-block;max-width:100%"
                               /></a>
