--- a/index.html
+++ b/index.html
@@ -320,10 +320,10 @@
                             style="box-sizing:content-box;vertical-align:middle;padding-left:8px;padding-right:0"
                           >
                             <h3
-                              style="font-weight:bold;text-align:center;margin:0;font-size:20px;padding:0px 4px 0px 0px"
+                              style="font-weight:bold;text-align:center;margin:0;font-size:20px;padding:0px 12px 0px 12px"
                             >
-                              La joie de la foi des enfants : réflexions sur la
-                              masse et la catéchèse à Escopa
+                              Semaine Sainte avec la communauté Adveniat à
+                              Marinduque
                             </h3>
                             <div
                               style="font-weight:normal;padding:16px 24px 16px 24px"
