--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta name=”robots” content=”noindex,nofollow”>
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
       <meta property="og:description" content="Newsletter of the Augustinians of the Assumption in the Philippines">
-      <meta property="og:image" content="https://github.com/communication-philippines-AA/imagesjune/blob/main/Retrat%20(2).jpg">
+      <meta property="og:image" content="https://github.com/communication-philippines-AA/imagesjune/blob/main/Retrat%20(2).jpg?raw=true">
     </head>
   <body>
     <div
@@ -1344,9 +1344,9 @@
                         style="box-sizing:content-box;vertical-align:middle;padding-left:8px;padding-right:0"
                       >
                         <h3
-                          style="font-weight:bold;margin:0;font-size:20px;padding:0px 24px 8px 24px"
+                          style="font-weight:bold;text-align:center;margin:0;font-size:20px;padding:0px 24px 0px 12px"
                         >
-                          Réactions au premier numéro de la Newsletter.
+                          Réactions aux précédents numéros de la Newsletter.
                         </h3>
                         <div
                           style="font-weight:normal;padding:8px 24px 16px 24px"
