--- a/index.html
+++ b/index.html
@@ -1118,8 +1118,7 @@
                             <div
                               style="font-weight:normal;padding:0px 24px 0px 4px"
                             >
-                              Le Frère Thầy Sơn Giuse Nguyễn Quốc, AA, aux
-                              Philippines depuis six ans, a obtenu son Bac....
+                              Frère Giuse Nguyen Quoc Son, AA, est plus connu sous le nom de Frère Son. Il étudie et a une...
                             </div>
                             <div
                               style="text-align:center;padding:0px 24px 0px 24px"
